...
    <string name="app_manager_advanced_settings_title">App Manager &gt; Advanced Settings</string>
    <string name="app_manager_advanced_settings_option">Advanced</string>
    <string name="app_manager_menu_about">About CommCare</string>
    <string name="app_manager_developer_options_title">App Manager &gt; Developer Options</string>
    <string name="app_manager_advanced_developer_options">Developer Options</string>
    <string name="app_manager_developer_options_enabled">CommCare Developer Mode Enabled</string>
    <string name="menu_app_list_install">See Apps for My User</string>
    <string name="menu_app_list_install_other_user">See Apps for Another User</string>
    <string name="toggle_web_user_mode">Web User</string>
    <string name="missing_fields">Please enter all required fields.</string>
    <string name="email_address_invalid">Please enter a valid email address.</string>
    <string name="get_app_list_user_error_mobile">An invalid username, domain, or password was provided. Please make sure all of the fields you entered are correct.</string>
    <string name="get_app_list_user_error_web">An invalid email or password was provided. Please make sure all of the fields you entered are correct.</string>
    <string name="get_app_list_unknown_error">An error occurred while trying to get your list of apps. Please try again, or contact support if the problem persists.</string>
...
